gcc/testsuite/g++.dg/cpp0x/inline-ns5.C
// { dg-options "-std=gnu++98 -pedantic-errors" }
inline namespace { } // { dg-error "inline namespaces" }
